<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#97d8e5"
    tools:context="mu.organyze.LoginActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"

        android:src="@drawable/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:scaleType="fitCenter"
        android:src="@drawable/app_logo"
        app:layout_constraintBottom_toTopOf="@+id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="184dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginStart="30dp"
            android:background="@drawable/trans_white_rec"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="Get Started"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="28dp"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="Details for you to register"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/round_white"
                android:drawableLeft="@drawable/email_icon"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginBottom="10dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:background="@drawable/round_white"
                android:drawableLeft="@drawable/email_password"
                android:drawablePadding="5dp"
                android:paddingStart="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textViewSignin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:text="Sign in here, if registered already"
                android:textColor="#fff"
                android:textSize="12dp"
                android:textStyle="bold"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_editor_absoluteX="78dp"
                tools:layout_editor_absoluteY="438dp" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="65dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginBottom="36dp"
                android:background="#1b82e2"
                android:scaleType="fitCenter"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="#ffffff"
                android:textSize="11dp"
                android:textStyle="bold"
                tools:layout_constraintBottom_creator="1"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintRight_creator="1"
                tools:layout_editor_absoluteX="74dp"
                tools:layout_editor_absoluteY="463dp" />

        </LinearLayout>
    </ScrollView>

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="15"
        android:hint="Email"
        android:inputType="textEmailAddress"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@+id/editTextPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="282dp"
        android:ems="15"
        android:hint="Password"
        android:inputType="textPassword"
        android:textSize="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/editTextEmail"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />


</android.support.constraint.ConstraintLayout>
